; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/txx9/rbtx4938/extr_irq.c_toshiba_rbtx4938_irq_nested.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/txx9/rbtx4938/extr_irq.c_toshiba_rbtx4938_irq_nested.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@rbtx4938_imstat_addr = common dso_local global i32 0, align 4
@RBTX4938_IRQ_IOC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @toshiba_rbtx4938_irq_nested to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @toshiba_rbtx4938_irq_nested(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @rbtx4938_imstat_addr, align 4
  %6 = call i32 @readb(i32 %5)
  store i32 %6, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = icmp ne i32 %7, 0
  %9 = xor i1 %8, true
  %10 = zext i1 %9 to i32
  %11 = call i64 @unlikely(i32 %10)
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load i32, i32* @RBTX4938_IRQ_IOC, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @__fls8(i32 %16)
  %18 = add nsw i32 %15, %17
  store i32 %18, i32* %2, align 4
  br label %19

19:                                               ; preds = %14, %13
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @readb(i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @__fls8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
